# serializer version: 1
# name: TestJsonSchemaContract.test_json_schema_shape[01_single_agent]
  dict({
    'duration_ms': 'float',
    'failed': 'int',
    'insights': dict({
      'cached': 'bool',
      'cost_usd': 'float',
      'markdown_summary': 'str',
      'tokens_used': 'int',
    }),
    'name': 'str',
    'passed': 'int',
    'schema_version': 'str',
    'skipped': 'int',
    'suite_docstring': 'str',
    'tests': list([
      dict({
        'agent_id': 'str',
        'assertions': list([
          dict({
            'details': 'str',
            'message': 'str',
            'passed': 'bool',
            'type': 'str',
          }),
        ]),
        'class_docstring': 'NoneType',
        'docstring': 'str',
        'duration_ms': 'float',
        'error': 'NoneType',
        'eval_name': 'str',
        'eval_result': dict({
          '_messages': list([
            dict({
              'content': 'str',
              'role': 'str',
            }),
          ]),
          'assertions': list([
            '<empty>',
          ]),
          'available_tools': list([
            dict({
              'description': 'str',
              'input_schema': dict({
                'properties': dict({
                  'account': dict({
                    'description': 'str',
                    'enum': list([
                      'str',
                    ]),
                    'type': 'str',
                  }),
                }),
                'required': list([
                  'str',
                ]),
                'type': 'str',
              }),
              'name': 'str',
              'server_name': 'str',
            }),
          ]),
          'cost_usd': 'float',
          'duration_ms': 'float',
          'effective_system_prompt': 'str',
          'error': 'NoneType',
          'session_context_count': 'int',
          'skill_info': 'NoneType',
          'success': 'bool',
          'token_usage': dict({
            'completion': 'int',
            'prompt': 'int',
          }),
          'turns': list([
            dict({
              'content': 'str',
              'role': 'str',
              'tool_calls': list([
                '<empty>',
              ]),
            }),
          ]),
        }),
        'model': 'str',
        'name': 'str',
        'outcome': 'str',
        'skill_name': 'NoneType',
        'system_prompt_name': 'NoneType',
      }),
    ]),
    'timestamp': 'str',
  })
# ---
# name: TestJsonSchemaContract.test_json_schema_shape[02_multi_agent]
  dict({
    'duration_ms': 'float',
    'failed': 'int',
    'insights': dict({
      'cached': 'bool',
      'cost_usd': 'float',
      'markdown_summary': 'str',
      'tokens_used': 'int',
    }),
    'name': 'str',
    'passed': 'int',
    'schema_version': 'str',
    'skipped': 'int',
    'suite_docstring': 'str',
    'tests': list([
      dict({
        'agent_id': 'str',
        'assertions': list([
          dict({
            'details': 'str',
            'message': 'str',
            'passed': 'bool',
            'type': 'str',
          }),
        ]),
        'class_docstring': 'NoneType',
        'docstring': 'str',
        'duration_ms': 'float',
        'error': 'NoneType',
        'eval_name': 'str',
        'eval_result': dict({
          '_messages': list([
            dict({
              'content': 'str',
              'role': 'str',
            }),
          ]),
          'assertions': list([
            '<empty>',
          ]),
          'available_tools': list([
            dict({
              'description': 'str',
              'input_schema': dict({
                'properties': dict({
                  'account': dict({
                    'description': 'str',
                    'enum': list([
                      'str',
                    ]),
                    'type': 'str',
                  }),
                }),
                'required': list([
                  'str',
                ]),
                'type': 'str',
              }),
              'name': 'str',
              'server_name': 'str',
            }),
          ]),
          'cost_usd': 'float',
          'duration_ms': 'float',
          'effective_system_prompt': 'str',
          'error': 'NoneType',
          'session_context_count': 'int',
          'skill_info': 'NoneType',
          'success': 'bool',
          'token_usage': dict({
            'completion': 'int',
            'prompt': 'int',
          }),
          'turns': list([
            dict({
              'content': 'str',
              'role': 'str',
              'tool_calls': list([
                '<empty>',
              ]),
            }),
          ]),
        }),
        'model': 'str',
        'name': 'str',
        'outcome': 'str',
        'skill_name': 'NoneType',
        'system_prompt_name': 'NoneType',
      }),
    ]),
    'timestamp': 'str',
  })
# ---
# name: TestJsonSchemaContract.test_json_schema_shape[03_multi_agent_sessions]
  dict({
    'duration_ms': 'float',
    'failed': 'int',
    'insights': dict({
      'cached': 'bool',
      'cost_usd': 'float',
      'markdown_summary': 'str',
      'tokens_used': 'int',
    }),
    'name': 'str',
    'passed': 'int',
    'schema_version': 'str',
    'skipped': 'int',
    'suite_docstring': 'str',
    'tests': list([
      dict({
        'agent_id': 'str',
        'assertions': list([
          dict({
            'details': 'str',
            'message': 'str',
            'passed': 'bool',
            'type': 'str',
          }),
        ]),
        'class_docstring': 'str',
        'docstring': 'str',
        'duration_ms': 'float',
        'error': 'NoneType',
        'eval_name': 'str',
        'eval_result': dict({
          '_messages': list([
            dict({
              'content': 'str',
              'role': 'str',
            }),
          ]),
          'assertions': list([
            '<empty>',
          ]),
          'available_tools': list([
            dict({
              'description': 'str',
              'input_schema': dict({
                'properties': dict({
                  'account': dict({
                    'description': 'str',
                    'enum': list([
                      'str',
                    ]),
                    'type': 'str',
                  }),
                }),
                'required': list([
                  'str',
                ]),
                'type': 'str',
              }),
              'name': 'str',
              'server_name': 'str',
            }),
          ]),
          'cost_usd': 'float',
          'duration_ms': 'float',
          'effective_system_prompt': 'str',
          'error': 'NoneType',
          'session_context_count': 'int',
          'skill_info': 'NoneType',
          'success': 'bool',
          'token_usage': dict({
            'completion': 'int',
            'prompt': 'int',
          }),
          'turns': list([
            dict({
              'content': 'str',
              'role': 'str',
              'tool_calls': list([
                '<empty>',
              ]),
            }),
          ]),
        }),
        'model': 'str',
        'name': 'str',
        'outcome': 'str',
        'skill_name': 'NoneType',
        'system_prompt_name': 'NoneType',
      }),
    ]),
    'timestamp': 'str',
  })
# ---
# name: TestJsonSchemaContract.test_json_schema_shape[04_agent_selector]
  dict({
    'duration_ms': 'float',
    'failed': 'int',
    'insights': dict({
      'cached': 'bool',
      'cost_usd': 'float',
      'markdown_summary': 'str',
      'tokens_used': 'int',
    }),
    'name': 'str',
    'passed': 'int',
    'schema_version': 'str',
    'skipped': 'int',
    'suite_docstring': 'str',
    'tests': list([
      dict({
        'agent_id': 'str',
        'assertions': list([
          dict({
            'details': 'str',
            'message': 'str',
            'passed': 'bool',
            'type': 'str',
          }),
        ]),
        'class_docstring': 'NoneType',
        'docstring': 'str',
        'duration_ms': 'float',
        'error': 'NoneType',
        'eval_name': 'str',
        'eval_result': dict({
          '_messages': list([
            dict({
              'content': 'str',
              'role': 'str',
            }),
          ]),
          'assertions': list([
            '<empty>',
          ]),
          'available_tools': list([
            dict({
              'description': 'str',
              'input_schema': dict({
                'properties': dict({
                  'account': dict({
                    'description': 'str',
                    'enum': list([
                      'str',
                    ]),
                    'type': 'str',
                  }),
                }),
                'required': list([
                  'str',
                ]),
                'type': 'str',
              }),
              'name': 'str',
              'server_name': 'str',
            }),
          ]),
          'cost_usd': 'float',
          'duration_ms': 'float',
          'effective_system_prompt': 'str',
          'error': 'NoneType',
          'session_context_count': 'int',
          'skill_info': 'NoneType',
          'success': 'bool',
          'token_usage': dict({
            'completion': 'int',
            'prompt': 'int',
          }),
          'turns': list([
            dict({
              'content': 'str',
              'role': 'str',
              'tool_calls': list([
                '<empty>',
              ]),
            }),
          ]),
        }),
        'model': 'str',
        'name': 'str',
        'outcome': 'str',
        'skill_name': 'NoneType',
        'system_prompt_name': 'NoneType',
      }),
    ]),
    'timestamp': 'str',
  })
# ---
# name: TestRoundTrip.test_round_trip_preserves_schema[01_single_agent]
  dict({
    'duration_ms': 'float',
    'failed': 'int',
    'name': 'str',
    'passed': 'int',
    'skipped': 'int',
    'suite_docstring': 'str',
    'tests': list([
      dict({
        'agent_id': 'str',
        'assertions': list([
          dict({
            'details': 'str',
            'message': 'str',
            'passed': 'bool',
            'type': 'str',
          }),
        ]),
        'class_docstring': 'NoneType',
        'docstring': 'str',
        'duration_ms': 'float',
        'error': 'NoneType',
        'eval_name': 'str',
        'eval_result': dict({
          '_messages': list([
            '<empty>',
          ]),
          'assertions': list([
            '<empty>',
          ]),
          'available_tools': list([
            dict({
              'description': 'str',
              'input_schema': dict({
                'properties': dict({
                  'account': dict({
                    'description': 'str',
                    'enum': list([
                      'str',
                    ]),
                    'type': 'str',
                  }),
                }),
                'required': list([
                  'str',
                ]),
                'type': 'str',
              }),
              'name': 'str',
              'server_name': 'str',
            }),
          ]),
          'clarification_stats': 'NoneType',
          'cost_usd': 'float',
          'custom_agent_info': 'NoneType',
          'duration_ms': 'float',
          'effective_system_prompt': 'str',
          'error': 'NoneType',
          'instruction_files': list([
            '<empty>',
          ]),
          'mcp_prompts': list([
            '<empty>',
          ]),
          'premium_requests': 'float',
          'prompt_name': 'NoneType',
          'session_context_count': 'int',
          'skill_info': 'NoneType',
          'success': 'bool',
          'token_usage': dict({
            'completion': 'int',
            'prompt': 'int',
          }),
          'turns': list([
            dict({
              'content': 'str',
              'role': 'str',
              'tool_calls': list([
                '<empty>',
              ]),
            }),
          ]),
        }),
        'iteration': 'NoneType',
        'model': 'str',
        'name': 'str',
        'outcome': 'str',
        'skill_name': 'NoneType',
        'system_prompt_name': 'NoneType',
      }),
    ]),
    'timestamp': 'str',
  })
# ---
# name: TestRoundTrip.test_round_trip_preserves_schema[02_multi_agent]
  dict({
    'duration_ms': 'float',
    'failed': 'int',
    'name': 'str',
    'passed': 'int',
    'skipped': 'int',
    'suite_docstring': 'str',
    'tests': list([
      dict({
        'agent_id': 'str',
        'assertions': list([
          dict({
            'details': 'str',
            'message': 'str',
            'passed': 'bool',
            'type': 'str',
          }),
        ]),
        'class_docstring': 'NoneType',
        'docstring': 'str',
        'duration_ms': 'float',
        'error': 'NoneType',
        'eval_name': 'str',
        'eval_result': dict({
          '_messages': list([
            '<empty>',
          ]),
          'assertions': list([
            '<empty>',
          ]),
          'available_tools': list([
            dict({
              'description': 'str',
              'input_schema': dict({
                'properties': dict({
                  'account': dict({
                    'description': 'str',
                    'enum': list([
                      'str',
                    ]),
                    'type': 'str',
                  }),
                }),
                'required': list([
                  'str',
                ]),
                'type': 'str',
              }),
              'name': 'str',
              'server_name': 'str',
            }),
          ]),
          'clarification_stats': 'NoneType',
          'cost_usd': 'float',
          'custom_agent_info': 'NoneType',
          'duration_ms': 'float',
          'effective_system_prompt': 'str',
          'error': 'NoneType',
          'instruction_files': list([
            '<empty>',
          ]),
          'mcp_prompts': list([
            '<empty>',
          ]),
          'premium_requests': 'float',
          'prompt_name': 'NoneType',
          'session_context_count': 'int',
          'skill_info': 'NoneType',
          'success': 'bool',
          'token_usage': dict({
            'completion': 'int',
            'prompt': 'int',
          }),
          'turns': list([
            dict({
              'content': 'str',
              'role': 'str',
              'tool_calls': list([
                '<empty>',
              ]),
            }),
          ]),
        }),
        'iteration': 'NoneType',
        'model': 'str',
        'name': 'str',
        'outcome': 'str',
        'skill_name': 'NoneType',
        'system_prompt_name': 'NoneType',
      }),
    ]),
    'timestamp': 'str',
  })
# ---
# name: TestRoundTrip.test_round_trip_preserves_schema[03_multi_agent_sessions]
  dict({
    'duration_ms': 'float',
    'failed': 'int',
    'name': 'str',
    'passed': 'int',
    'skipped': 'int',
    'suite_docstring': 'str',
    'tests': list([
      dict({
        'agent_id': 'str',
        'assertions': list([
          dict({
            'details': 'str',
            'message': 'str',
            'passed': 'bool',
            'type': 'str',
          }),
        ]),
        'class_docstring': 'str',
        'docstring': 'str',
        'duration_ms': 'float',
        'error': 'NoneType',
        'eval_name': 'str',
        'eval_result': dict({
          '_messages': list([
            '<empty>',
          ]),
          'assertions': list([
            '<empty>',
          ]),
          'available_tools': list([
            dict({
              'description': 'str',
              'input_schema': dict({
                'properties': dict({
                  'account': dict({
                    'description': 'str',
                    'enum': list([
                      'str',
                    ]),
                    'type': 'str',
                  }),
                }),
                'required': list([
                  'str',
                ]),
                'type': 'str',
              }),
              'name': 'str',
              'server_name': 'str',
            }),
          ]),
          'clarification_stats': 'NoneType',
          'cost_usd': 'float',
          'custom_agent_info': 'NoneType',
          'duration_ms': 'float',
          'effective_system_prompt': 'str',
          'error': 'NoneType',
          'instruction_files': list([
            '<empty>',
          ]),
          'mcp_prompts': list([
            '<empty>',
          ]),
          'premium_requests': 'float',
          'prompt_name': 'NoneType',
          'session_context_count': 'int',
          'skill_info': 'NoneType',
          'success': 'bool',
          'token_usage': dict({
            'completion': 'int',
            'prompt': 'int',
          }),
          'turns': list([
            dict({
              'content': 'str',
              'role': 'str',
              'tool_calls': list([
                '<empty>',
              ]),
            }),
          ]),
        }),
        'iteration': 'NoneType',
        'model': 'str',
        'name': 'str',
        'outcome': 'str',
        'skill_name': 'NoneType',
        'system_prompt_name': 'NoneType',
      }),
    ]),
    'timestamp': 'str',
  })
# ---
# name: TestRoundTrip.test_round_trip_preserves_schema[04_agent_selector]
  dict({
    'duration_ms': 'float',
    'failed': 'int',
    'name': 'str',
    'passed': 'int',
    'skipped': 'int',
    'suite_docstring': 'str',
    'tests': list([
      dict({
        'agent_id': 'str',
        'assertions': list([
          dict({
            'details': 'str',
            'message': 'str',
            'passed': 'bool',
            'type': 'str',
          }),
        ]),
        'class_docstring': 'NoneType',
        'docstring': 'str',
        'duration_ms': 'float',
        'error': 'NoneType',
        'eval_name': 'str',
        'eval_result': dict({
          '_messages': list([
            '<empty>',
          ]),
          'assertions': list([
            '<empty>',
          ]),
          'available_tools': list([
            dict({
              'description': 'str',
              'input_schema': dict({
                'properties': dict({
                  'account': dict({
                    'description': 'str',
                    'enum': list([
                      'str',
                    ]),
                    'type': 'str',
                  }),
                }),
                'required': list([
                  'str',
                ]),
                'type': 'str',
              }),
              'name': 'str',
              'server_name': 'str',
            }),
          ]),
          'clarification_stats': 'NoneType',
          'cost_usd': 'float',
          'custom_agent_info': 'NoneType',
          'duration_ms': 'float',
          'effective_system_prompt': 'str',
          'error': 'NoneType',
          'instruction_files': list([
            '<empty>',
          ]),
          'mcp_prompts': list([
            '<empty>',
          ]),
          'premium_requests': 'float',
          'prompt_name': 'NoneType',
          'session_context_count': 'int',
          'skill_info': 'NoneType',
          'success': 'bool',
          'token_usage': dict({
            'completion': 'int',
            'prompt': 'int',
          }),
          'turns': list([
            dict({
              'content': 'str',
              'role': 'str',
              'tool_calls': list([
                '<empty>',
              ]),
            }),
          ]),
        }),
        'iteration': 'NoneType',
        'model': 'str',
        'name': 'str',
        'outcome': 'str',
        'skill_name': 'NoneType',
        'system_prompt_name': 'NoneType',
      }),
    ]),
    'timestamp': 'str',
  })
# ---
